--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,23 @@
-# 핵심 패키지만 포함 (경량화 버전)
-streamlit==1.32.0
+# Core dependencies
+streamlit==1.31.0
 pandas==2.2.0
 numpy==1.26.3
 openpyxl==3.1.2
-plotly==5.19.0
-google-generativeai==0.3.2
+
+# SharePoint integration
+Office365-REST-Python-Client==2.5.2
 requests==2.31.0
+
+# AI and Analytics
+google-generativeai==0.3.2
+plotly==5.19.0
+
+# Data processing
+python-dateutil==2.8.2
+
+# Optional performance improvements
+pyarrow==15.0.0  # For faster parquet operations if needed
+xlsxwriter==3.1.9  # Alternative Excel writer
+
+# Security
+cryptography==42.0.2  # For secure connections
