--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-streamlit==1.29.0
-pandas==2.0.3
-numpy==1.24.3
-openpyxl==3.1.2
-plotly==5.18.0
-requests==2.31.0
-Office365-REST-Python-Client==2.5.0
-google-generativeai==0.3.0
-python-dateutil==2.8.2
+streamlit
+pandas
+numpy
+openpyxl
+plotly
+requests
+Office365-REST-Python-Client
+google-generativeai
+python-dateutil
